[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wqedmps"
version = "0.1.0"
description = "Waveguide QED tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "seemps @ git+https://github.com/juanjosegarciaripoll/seemps2.git",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.4",
    "scipy-stubs>=1.16.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.4",
    "scipy-stubs>=1.16.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wqedlib*"]
